Fixed buttons, it was z-index stupidity

--- a/Web/src/components/Game/styles/Game.css
+++ b/Web/src/components/Game/styles/Game.css
@@ -6,7 +6,6 @@
     height: 40vw;
     justify-content: start;
     align-items: center;
-    z-index: -200;
 }
 
 .gameWindow-container {
@@ -17,7 +16,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    z-index: -100;
+    z-index: 1;
 }
 
 .game-table {
